--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Letisia's site</title>
-  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" href="favicon-32x32.png">
 </head>
@@ -13,8 +12,8 @@
 <body>
   <div class="top-container">
     <div class="title">
-      <h1>Welcome to my site!</h1>
-      <h2> Hello! My name is Letisia! </h2>
+      <h1>Добре дошли на моя сайт!</h1>
+      <h2> Здравейте! Аз се казвам Летисия! </h2>
     </div>
     <div class="img">
       <img src="pics/Letisia.jpg" alt="This is me!" width="50%">
@@ -23,28 +22,40 @@
   <div class="row">
 
 
-<div class="column-container"> 
-</column-container>">
+    <div class="column-container">
+      </column-container>">
 
-</div>
-  <div class="middle-container">
-    <h4>I am a 12 years old. I live in Sofia, Bulgaria. I love both Bulgaria and Greece as my father is greek.
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> </h4>
-    <h3>What I love to do &#9829; </h3>
-    <hr class="lines">
-    <ul class="hobbies">
-      <li>Music</li>
-      <li>Reading books</li>
-      <li>Dancing</li>
-    </ul>
-    <hr class="lines">
-  </div>
+    </div>
+    <div class="middle-container">
+      <h4>Аз съм на 12 години и живея в София, България. Моят баща е грък, затова аз обичам много и Гърция.
+        <p>Аз имам малка сестричка. Тя се казва Франческа и аз много я обичам. Ето няколко снимки на Франческа, мен и двете заедно:</p>
+        <table>
+          <td> <img src="pics/Francheska.jpg" alt="This is my syster" height="300px"> </td>
+          <td> <img src="pics/image1.jpg" alt="This is my syster and me" height="300px"> </td>
+          <td> <img src="pics/image2.jpg" alt="This is my syster and me" height="300px"> </td>
+        </table>
+        <h3>Любимите ми занимания &#9829; </h3>
+        <hr class="lines">
+        <ul class="hobbies">
+          <li>Слушане на музика</li>
+          <li>Четене на книги</li>
+          <li>Танци</li>
+        </ul>
+
+        <hr class="lines">
+    </div>
   </div>
   <div class="bottom-container">
-<img src="pics/flower2.png" alt="image of flowers">
+    <table>
 
+  <td>
+    <img src="pics/flower2.png" alt="image of flowers">
+  </td>
+<td>
+  <h4>  <a href="ContactMe.html">Свържете се с мен</a></h4>
+</td>
 
+  </table>
   </div>
 
 </body>
