--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Добре дошли на моя сайт!</h1>
       <h2> Здравейте! Аз се казвам Летисия! </h2>
     </div>
-    <div class="img">
+    <div class="myPic">
       <img src="pics/Letisia.jpg" alt="This is me!" width="50%">
     </div>
   </div>
@@ -38,6 +38,7 @@
         <hr class="lines">
         <ul class="hobbies">
           <li>Слушане на музика</li>
+          <ol> <a href="https://www.justinbiebermusic.com/" target=" _parent"> Моят любим певец </ol></a>
           <li>Четене на книги</li>
           <li>Танци</li>
         </ul>
